fix 3. Sometime the speck goes off screen on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
   width: 100%;
   margin: 0;
   overflow: hidden;
-  background: black;
+  background: white !important;
   z-index: 101;
   position: fixed;
 }
